change Runtime.exec() arguments